tests/errors/surf_arity_11.ki
# native String method given wrong arity: startswith() with no argument
discard "hello".startswith()
